--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/recharts": "^1.8.23",
     "@types/styled-components": "^5.1.22",
     "react": "^17.0.2",
     "react-countup": "^6.1.1",
